[package]
name = "sidecar-agent"
version = "0.1.0"
authors = ["SLO Scheduler Team"]
edition = "2021"

[dependencies]
tokio = { version = "1.32", features = ["rt-multi-thread", "macros", "signal"] }
anyhow = "1.0"
prost = "0.12"
prost-types = "0.12"
tonic = { version = "0.10", features = ["prost"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "cookies"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
serde_json = "1.0"
async-stream = "0.3"
tokio-stream = "0.1"
sysinfo = { version = "0.30", default-features = false }
nvml-wrapper = { version = "0.8", optional = true }
aya = { version = "0.12", optional = true }
serde_with = { version = "3.6", features = ["json"] }
num_cpus = "1.16"
hostname = "0.3"
parking_lot = "0.12"

[features]
default = []
gpu = ["nvml-wrapper"]
ebpf = ["aya"]
